force-app/main/default/objects/Case/fields/OM_SAC_Acciones_Correctivas__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Acciones_Correctivas__c</fullName>
    <label>Acciones correctivas</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>