force-app/main/default/objects/Case/fields/OM_SAC_alcanceCliente__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_alcanceCliente__c</fullName>
    <label>Alcance cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Linea envasado</fullName>
            </value>
            <value>
                <fullName>Cliente final</fullName>
            </value>
            <value>
                <fullName>Consumidor</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>