force-app/main/default/objects/Case/fields/OM_SAC_cantidadAbono__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_cantidadAbono__c</fullName>
    <label>Coste estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>