force-app/main/default/objects/Case/fields/OM_SAC_cantidadAfectada__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_cantidadAfectada__c</fullName>
    <label>Cantidad afectada</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>