force-app/main/default/objects/Case/fields/OM_SAC_Categoria_incidencia_cliente__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Categoria_incidencia_cliente__c</fullName>
    <label>Categoria incidencia cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>