force-app/main/default/objects/Case/fields/OM_SAC_Categorizacion_Incidencia__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Categorizacion_Incidencia__c</fullName>
    <label>Categorización incidencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>