force-app/main/default/objects/Case/fields/OM_SAC_CategorizacionColorAuto__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_CategorizacionColorAuto__c</fullName>
    <formula>CASE(
    OM_SAC_Categorizacion_Incidencia__c,
    &quot;C&quot;, &quot;🔴 Gravedad Alta&quot;,
    &quot;B&quot;, &quot;🟠 Gravedad Media&quot;,
    &quot;A&quot;, &quot;🟢 Gravedad Baja&quot;,
    &quot;&quot;
)</formula>
    <label>Categorización incidencia Color</label>
    <type>Text</type>
</CustomField>