force-app/main/default/objects/Case/fields/OM_SAC_Causa_Raiz_No_Deteccion__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Causa_Raiz_No_Deteccion__c</fullName>
    <label>Causa raíz no detección</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>