force-app/main/default/objects/Case/fields/OM_SAC_Causa_Raiz_Ocurrencia__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Causa_Raiz_Ocurrencia__c</fullName>
    <label>Causa raíz ocurrencia</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>