force-app/main/default/objects/Case/fields/OM_SAC_Cod_Egestiona__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Cod_Egestiona__c</fullName>
    <label>Código E-Gestiona</label>
    <length>100</length>
    <type>Text</type>
</CustomField>