force-app/main/default/objects/Case/fields/OM_SAC_CodigoModelo__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_CodigoModelo__c</fullName>
    <formula>OM_SAC_modeloYDenominacion__r.ProductCode</formula>
    <label>Código modelo</label>
    <type>Text</type>
</CustomField>