force-app/main/default/objects/Case/fields/OM_SAC_codigoReclamacionCliente__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_codigoReclamacionCliente__c</fullName>
    <label>Código Reclamación Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>