force-app/main/default/objects/Case/fields/OM_SAC_CosteEstimado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_CosteEstimado__c</fullName>
    <label>Coste estimado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>