force-app/main/default/objects/Case/fields/OM_SAC_Defecto__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Defecto__c</fullName>
    <label>Defecto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>