force-app/main/default/objects/Case/fields/OM_SAC_descripcionDelProblema__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_descripcionDelProblema__c</fullName>
    <label>Descripción del problema</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>