force-app/main/default/objects/Case/fields/OM_SAC_DetectadasEnClienteDeCuantas__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_DetectadasEnClienteDeCuantas__c</fullName>
    <label>Detectadas en cliente de cuantas</label>
    <length>100</length>
    <type>Text</type>
</CustomField>