force-app/main/default/objects/Case/fields/OM_SAC_devolucion__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_devolucion__c</fullName>
    <label>Devolución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>