force-app/main/default/objects/Case/fields/OM_SAC_ean__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_ean__c</fullName>
    <label>EAN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>