force-app/main/default/objects/Case/fields/OM_SAC_EspecificacionCliente__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_EspecificacionCliente__c</fullName>
    <label>Especificación cliente (CdC, si hay)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>