force-app/main/default/objects/Case/fields/OM_SAC_fechaDeRecepcion__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_fechaDeRecepcion__c</fullName>
    <label>Fecha de recepción de incidencia</label>
    <type>Date</type>
</CustomField>