force-app/main/default/objects/Case/fields/OM_SAC_fechaDeRevision__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_fechaDeRevision__c</fullName>
    <label>Fecha de revisión</label>
    <type>Date</type>
</CustomField>