force-app/main/default/objects/Case/fields/OM_SAC_FormulaNameConga__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_FormulaNameConga__c</fullName>
    <formula>&quot;(&quot;+OM_VID_EAN__r.Name  +&quot;) &quot;+ OM_SAC_modeloYDenominacion__r.ProductCode + &quot; &quot; +  OM_SAC_modeloYDenominacion__r.Name</formula>
    <label>Formula Name Conga</label>
    <type>Text</type>
</CustomField>