force-app/main/default/objects/Case/fields/OM_SAC_Fotografias__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Fotografias__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fotografías</label>
    <type>Checkbox</type>
</CustomField>