force-app/main/default/objects/Case/fields/OM_SAC_FotografiasCongaAuto__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_FotografiasCongaAuto__c</fullName>
    <formula>IF(OM_SAC_Fotografias__c, &quot;Sí&quot;, &quot;No&quot;)</formula>
    <label>Fotografías Conga Formula</label>
    <type>Text</type>
</CustomField>