force-app/main/default/objects/Case/fields/OM_SAC_Grupo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Grupo_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insatisfacciones grupo</relationshipLabel>
    <relationshipName>Insatisfacciones_grupo</relationshipName>
    <type>Lookup</type>
</CustomField>