force-app/main/default/objects/Case/fields/OM_SAC_hipotesisDelAt__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_hipotesisDelAt__c</fullName>
    <label>Hipótesis del AT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>