force-app/main/default/objects/Case/fields/OM_SAC_impactoEnCliente__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_impactoEnCliente__c</fullName>
    <label>Impacto en cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Productividad</fullName>
            </value>
            <value>
                <fullName>Imagen (Aspecto)</fullName>
            </value>
            <value>
                <fullName>Seguridad Alimentaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>