force-app/main/default/objects/Case/fields/OM_SAC_InfoDeCuandoLlegaran__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_InfoDeCuandoLlegaran__c</fullName>
    <label>Info de cuando llegaran</label>
    <length>255</length>
    <type>Text</type>
</CustomField>