force-app/main/default/objects/Case/fields/OM_SAC_Lista_de_distribucion__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Lista_de_distribucion__c</fullName>
    <defaultValue>&apos;distribucion.calidad@vidrala.com;naiara.molinuevo@vidrala.com&apos;</defaultValue>
    <label>Lista de distribución</label>
    <type>TextArea</type>
</CustomField>