force-app/main/default/objects/Case/fields/OM_SAC_loteOAlbaran__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_loteOAlbaran__c</fullName>
    <label>Lote o albarán</label>
    <length>100</length>
    <type>Text</type>
</CustomField>