force-app/main/default/objects/Case/fields/OM_SAC_modeloYDenominacion__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_modeloYDenominacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo y denominación</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>