force-app/main/default/objects/Case/fields/OM_SAC_ModoDeFalloEnCliente__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_ModoDeFalloEnCliente__c</fullName>
    <label>Modo de fallo en cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seguridad alimentaria</fullName>
            </value>
            <value>
                <fullName>Roturas consumidor final</fullName>
            </value>
            <value>
                <fullName>Roturas en diferido</fullName>
            </value>
            <value>
                <fullName>Estanqueidad</fullName>
            </value>
            <value>
                <fullName>Daño instalación</fullName>
            </value>
            <value>
                <fullName>Roturas en línea</fullName>
            </value>
            <value>
                <fullName>Llenado</fullName>
            </value>
            <value>
                <fullName>Taponado</fullName>
            </value>
            <value>
                <fullName>Etiquetado</fullName>
            </value>
            <value>
                <fullName>Transporte en línea cliente</fullName>
            </value>
            <value>
                <fullName>Incumplimiento pauta</fullName>
            </value>
            <value>
                <fullName>Despaletizado</fullName>
            </value>
            <value>
                <fullName>Aspecto</fullName>
            </value>
            <value>
                <fullName>Trazabilidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>