force-app/main/default/objects/Case/fields/OM_SAC_moldesAfectados__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_moldesAfectados__c</fullName>
    <label>Moldes afectados</label>
    <length>100</length>
    <type>Text</type>
</CustomField>