force-app/main/default/objects/Case/fields/OM_SAC_MuestrasTextAuto__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_MuestrasTextAuto__c</fullName>
    <formula>IF(
    ISPICKVAL(OM_SAC_muestrasFotografias__c, &quot;Sí&quot;),
    &quot;Las muestras se entregarán en planta el &quot; &amp; OM_SAC_InfoDeCuandoLlegaran__c,
    &quot;&quot;
)</formula>
    <label>Muestras email template</label>
    <type>Text</type>
</CustomField>