force-app/main/default/objects/Case/fields/OM_SAC_PaletsEnCliente__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_PaletsEnCliente__c</fullName>
    <label>Palets en cliente(envases + embotellado)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>