force-app/main/default/objects/Case/fields/OM_SAC_PaletsEnStockVA__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_PaletsEnStockVA__c</fullName>
    <label>Palets en stock VA-planta o alm. externo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>