force-app/main/default/objects/Case/fields/OM_SAC_PaletsEnviados__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_PaletsEnviados__c</fullName>
    <label>Palets enviados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>