force-app/main/default/objects/Case/fields/OM_SAC_Problema_reportado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Problema_reportado__c</fullName>
    <label>Problema reportado</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>