force-app/main/default/objects/Case/fields/OM_SAC_puntoDeDeteccionEnCliente__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_puntoDeDeteccionEnCliente__c</fullName>
    <label>Punto de detección en cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>