force-app/main/default/objects/Case/fields/OM_SAC_SituacionCliente__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_SituacionCliente__c</fullName>
    <label>Descripción de la situación con cliente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>