force-app/main/default/objects/Case/fields/OM_SAC_Tabla_Categorizacion__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Tabla_Categorizacion__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068Q40000095kcy&amp;operationContext=CHATTER&amp;contentId=05TQ400000As7Bp&quot;, &apos;image alternate text&apos;,250,750)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tabla Categorización</label>
    <type>Text</type>
</CustomField>