force-app/main/default/objects/Case/fields/OM_SAC_TasaDeAparicion__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_TasaDeAparicion__c</fullName>
    <label>Tasa de aparición (/10&apos;000 o en %)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>