force-app/main/default/objects/Case/fields/OM_VID_AccountNameAuto__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_AccountNameAuto__c</fullName>
    <formula>Account.Name</formula>
    <label>Nombre Cliente</label>
    <type>Text</type>
</CustomField>