force-app/main/default/objects/Case/fields/OM_VID_EAN__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_EAN__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>EAN</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SAP_Material_Code__c.OM_ProductRef__c</field>
            <operation>equals</operation>
            <valueField>$Source.OM_SAC_modeloYDenominacion__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SAP_Material_Code__c</referenceTo>
    <relationshipLabel>Insatisfacciones</relationshipLabel>
    <relationshipName>Insatisfacciones</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>