force-app/main/default/objects/Case/fields/OM_VID_Planta__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Planta__c</fullName>
    <label>Planta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1010</fullName>
                <label>Aiala</label>
            </value>
            <value>
                <fullName>1020</fullName>
                <label>Crisnova</label>
            </value>
            <value>
                <fullName>1030</fullName>
                <label>Castellar</label>
            </value>
            <value>
                <fullName>1040</fullName>
                <label>Gallo</label>
            </value>
            <value>
                <fullName>1090</fullName>
                <label>Santos Barosa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>