force-app/main/default/objects/Case/fields/OM_VID_TipoCliente__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_TipoCliente__c</fullName>
    <formula>IF(
    ISPICKVAL(Account.ClienteVIP__c, &quot;98&quot;),
    &quot;Preferente&quot;,
    IF(
        ISPICKVAL(Account.ClienteVIP__c, &quot;99&quot;),
        &quot;VIP&quot;,
        IF(
            ISPICKVAL(Account.ClienteVIP__c, &quot;ESPECIAL&quot;),
            &quot;Especial&quot;,
            &quot;&quot;
        )
    )
)</formula>
    <label>Tipo de cliente</label>
    <type>Text</type>
</CustomField>