force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Insatisfacciones (Product)</relationshipLabel>
    <relationshipName>Insatisfacciones</relationshipName>
    <type>Lookup</type>
</CustomField>