force-app/main/default/objects/Case/fields/Tipo_de_modelo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_modelo__c</fullName>
    <label>Tipo de modelo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estandar</fullName>
            </value>
            <value>
                <fullName>Personalizado</fullName>
            </value>
            <value>
                <fullName>Exclusivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>