force-app/main/default/objects/Case/fields/TIPOLOGIA_PRODUCTO__c.field-meta.xml
<CustomField>
    <fullName>TIPOLOGIA_PRODUCTO__c</fullName>
    <formula>TEXT(Product__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de producto</label>
    <type>Text</type>
</CustomField>