force-app/main/default/objects/Case/recordTypes/Fifty_Calidad_Insatisfaccion.recordType-meta.xml
<RecordType>
    <fullName>Fifty_Calidad_Insatisfaccion</fullName>
    <active>true</active>
    <businessProcess>Grupo</businessProcess>
    <label>Fifty Calidad Insatisfacción</label>
</RecordType>