force-app/main/default/objects/Case/validationRules/Codigo_Egestiona.validationRule-meta.xml
<ValidationRule>
    <fullName>Codigo_Egestiona</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Status, &apos;Pendiente notificar análisis&apos;),ISPICKVAL(Status, &apos;Análisis notificado&apos;)),ISBLANK(OM_SAC_Cod_Egestiona__c))</errorConditionFormula>
    <errorMessage>Obligatorio indicar el Código de la insatisfacción en E-Gestiona para poder pasar a la siguiente etapa</errorMessage>
</ValidationRule>