force-app/main/default/objects/Case/validationRules/OM_VidralaEuropeSalesNoModifica.validationRule-meta.xml
<ValidationRule>
    <fullName>OM_VidralaEuropeSalesNoModifica</fullName>
    <active>true</active>
    <description>Los perfiles Vidrala Europe Sales no pueden modificar insatisfacciones.</description>
    <errorConditionFormula>AND(
    !ISNEW(),
    $Profile.Name = &quot;Vidrala Europe Sales&quot;
)</errorConditionFormula>
    <errorMessage>Los usuarios con perfil Vidrala Europe Sales no pueden modificar Insatisfacciones.</errorMessage>
</ValidationRule>